restore scrollbar, fix positioning

--- a/src/component/container/LayerTreeClassic/LayerTreeClassic.css
+++ b/src/component/container/LayerTreeClassic/LayerTreeClassic.css
@@ -1,18 +1,19 @@
 .layer-tree-classic {
   position: absolute;
-  right: 2px;
+  right: 0px;
   z-index: 5;
   background-color: #fffffff0;
   border: 1px solid lightgray;
   display: flex;
   flex-direction: column;
+  max-height: calc(100% - var(--header-height) - var(--footer-height));
+  overflow-y: auto;
 }
+
 
 .layer-tree-classic .react-geo-layertree {
   top: var(--header-height);
-  width: var(--layerlegendaccordion-accordion-width);
-  max-height: calc(100% - var(--header-height) - var(--footer-height));
-  overflow-y: auto;
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -30,6 +31,9 @@
 }
 
 @media only screen and (max-width: 768px) {
+  .layer-tree-classic {
+    width: 100%;
+  }
   .layer-tree-classic .ant-tree-title {
     font-size: 20px;
   }
